--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <div class = "about">
                 <h1>Who am I?</h1>
                 <br>
-                <img src = "./image/self.jpg" style="height: 324px; width: 243px;">
+                <img src = "./image/self.png" style="height: 413px; width: 250px;">
                 <h3>I'm Calvin, and...</h3>
                 <p>I'm currently a Computational Mathematics student at University of Waterloo. I'm passionately interested in programming and I actively try my best to improve my skills.
                 </p>
