--- a/cs246.html
+++ b/cs246.html
@@ -80,7 +80,7 @@
                 </tr>
                 <tr>
                     <th colspan="5%">Note:</th>
-                    <td>All program codes below are provided by Prof. Lushman in class.</td>
+                    <td>All program codes in this course notes are provided by Prof. Lushman during class.</td>
                 </tr>
             </table>        
             <hr>
