--- a/cs246_2.html
+++ b/cs246_2.html
@@ -51,6 +51,7 @@
         <br><br>
         
         <div class="container">
+
             <br>
             <table class="header">
                 <tr>
@@ -78,9 +79,9 @@
                 </tr>
                 <tr>
                     <th colspan="5%">Note:</th>
-                    <td>All program codes below are provided by Prof. Lushman in class.</td>
+                    <td>All program codes in this course notes are provided by Prof. Lushman during class.</td>
                 </tr>
-            </table>
+            </table>      
             <hr>
                 
             <div class="lec4">
