--- a/cs230_2.html
+++ b/cs230_2.html
@@ -1308,8 +1308,8 @@
                 </ul>
 
                 <p>
-                    Clock Period (Cycle Time)<br>: Duration in seconds of a cycle<br>
-                    Clock Frequency (Clock Rate)<br>: Cycles per second (1/cycle time) in Hz (hertz)<br>
+                    Clock Period (Cycle Time): Duration in seconds of a cycle<br>
+                    Clock Frequency (Clock Rate): Cycles per second (1/cycle time) in Hz (hertz)<br>
                     <br>
                     Example: clock period of <span class="math">250ps = 250(10<sup>12</sup>) s/cycle</span>.<br>
                     Note: ps is picoseconds, a.k.a <span class="math">10<sup>-12</sup></span>.<br>
