--- a/cs230_4.html
+++ b/cs230_4.html
@@ -131,7 +131,7 @@
                 <br>
                 <b>The Compiler</b>
                 <ul>
-                    <li>translatess a program from a <u>source</u> language to a <u>target language</u></li>
+                    <li>translates a program from a <u>source</u> language to a <u>target language</u></li>
                     <li>typically from high language to low language</li>
                     <li>can be followed by an assembler to generate machine code</li>
                 </ul>
@@ -222,7 +222,7 @@
                 </ul>
                 <p>
                     A DFA determines whether a given input string is part of your regular language (accepted) if you end in an accepting state after reading the input.<br>
-                    Example: A DFA that accepts <code>"beq</code>.
+                    Example: A DFA that accepts <code>beq</code>.
                 </p>
                 <img src="./image/cs230/lec15/15_1.png">
                 <br><br>
@@ -245,7 +245,7 @@
                 </ul>
                 <img src="./image/cs230/lec15/15_2.png">
                 <p>
-                    A Bit harder to evaluate if any given string is in your regular lbnguage.<br>
+                    A Bit harder to evaluate if any given string is in your regular language.<br>
                     Example: <code>"00"</code> could end in <code>q<sub>0</sub></code>, <code>q<sub>1</sub></code> or <code>q<sub>2</sub></code> depending on the transitions you take.<br>
                     So long a string can end on an accepting state then it is accepted.<br>
                     It accepts any binary numbers that end in two 0's, or equivalently any binary number that is divisible by 4.<br>
@@ -498,7 +498,7 @@
                 </p>
                 <span>
                     <pre><code>
-                        <span class="cline">01&nbsp;&nbsp;</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;statement&gt;<br>
+                        <span class="cline">01&nbsp;&nbsp;</span> &lt;statement&gt;<br>
                         <span class="cline">02&nbsp;&nbsp;</span> &lt;keyword&gt; &lt;condition&gt; &lt;block&gt;<br>
                         <span class="cline">03&nbsp;&nbsp;</span> while &lt;condition&gt; &lt;block&gt;<br>
                         <span class="cline">04&nbsp;&nbsp;</span> while (1) &lt;block&gt; <br>
