--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 <img class="topImg" src="./image/self.png">
                 <h1><center>Who am I?</center></h1>
                 <h3>I'm Calvin, and...</h3>
-                <p>I'm currently a <i>Computational Mathematics</i> student at University of Waterloo.</p> 
+                <p>I'm currently a <i>Computational Mathematics</i> and <i>Statistics</i> (double majors) student at University of Waterloo.</p> 
                 <br>
                 <h3>I love coding, and...</h3>
                 <p>
