--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="col-md-12, top">
                     <h1>Chun Kit (Calvin) Li</h1>
-                    <h2>Computational Mathematics Student</h2>
+                    <h2>Computational Mathematics &amp; Statistics Student</h2>
                     <h2>University of Waterloo</h2>
                     <h2>Class of 2020</h2>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="col-md-8">
                     <p class="topIntro">
                         <center>
-                            I'm Calvin, a year 2 <i>Computational Mathematics</i> student at in University of Waterloo.<br><br>
+                            I'm Calvin, a year 2 <i>Computational Mathematics</i> with <i>Statistics</i> (double majors) student at in University of Waterloo.<br><br>
                             I really like coding. Since my major isn't computer science, I try my best to self-learning computer science.<br><br>
                             Also I love playing darts. But I haven't played darts after I moved to Waterloo. (I don't want to go bar...)<br><br>
                             Want to know more about me? <a href="./about.html">Press here</a>!<br><br>
