CS 230 course note

--- a/cs230_2.html
+++ b/cs230_2.html
@@ -215,7 +215,7 @@
           \end{align*}
         </p>
         <p>
-          From the normalized scientific notation \(1.1011 \cdot 2^{1}\), we know that \(F = 1011\), \(E = 1 + 3 = 4 = 100\) and <\(S = 0\).<br>
+          From the normalized scientific notation \(1.1011 \cdot 2^{1}\), we know that \(F = 1011\), \(E = 1 + 3 = 4 = 100\) and \(S = 0\).<br>
           So our final answer is \(0 \: 100 \: 1011\).
         </p>
         <p>
