--- a/testing/test.html
+++ b/testing/test.html
@@ -2,7 +2,8 @@
 <html lang="en">
   
   <head>
-    <meta charset="utf-8">  
+    <meta charset="utf-8">
+    <meta name="viewport">
     <title>Index</title>
     <link href="style.css" rel="stylesheet">
     
