--- a/test/projects.html
+++ b/test/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Projects</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/font-awesome-5.8.1/all.css">
   </head>
   
   <body>
@@ -44,10 +44,10 @@
       <footer>
         <p>Thanks For Coming. - Vert Li</p>
         <!-- icons -->
-        <a href = "mailto: ck6li@edu.uwaterloo.ca" target = "_blank;"><i class = "fa fa-envelope-square fa-2x"></i></a>
-        <a href = "https://www.linkedin.com/in/vertckli/" target = "_blank;"><i class = "fa fa-linkedin-square fa-2x"></i></a>       
-        <a href = "https://www.instagram.com/vert_arts/" target = "_blank;"><i class="fa fa-instagram fa-2x"></i></a>
-        <a href = "https://github.com/vertli" target = "_blank;"><i class="fa fa-github-square fa-2x"></i></a>
+        <a href = "mailto: ck6li@edu.uwaterloo.ca" target = "_blank;"><i class = "fas fa-envelope-square fa-2x"></i></a>
+        <a href = "https://www.linkedin.com/in/vertckli/" target = "_blank;"><i class = "fab fa-linkedin fa-2x"></i></a>       
+        <a href = "https://www.instagram.com/vert_arts/" target = "_blank;"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href = "https://github.com/vertli" target = "_blank;"><i class="fab fa-github-square fa-2x"></i></a>
         <!-- icons -->
         <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2019</p>
       </footer>
