--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
       <canvas id="c_matrix"></canvas>
     </section>
     
-    <div class="container">
+    <div class="container index">
       <a href="./about.html">Can't see the animation? Press me to enter the website.</a>
     </div>
   
