--- a/test/about.html
+++ b/test/about.html
@@ -148,7 +148,7 @@
       <footer id="footer">
         <p>Thanks For Coming. - Vert Li</p>
         <!-- icons -->
-        <a href = "mailto: ck6li@edu.uwaterloo.ca" target = "_blank;"><i class = "fas fa-envelope-square fa-2x"></i></a>
+        <a href = "mailto: vert.c.k.li@gmail.com" target = "_blank;"><i class = "fas fa-envelope-square fa-2x"></i></a>
         <a href = "https://www.linkedin.com/in/vertckli/" target = "_blank;"><i class = "fab fa-linkedin fa-2x"></i></a>       
         <a href = "https://www.instagram.com/vert_arts/" target = "_blank;"><i class="fab fa-instagram fa-2x"></i></a>
         <a href = "https://github.com/vertli" target = "_blank;"><i class="fab fa-github-square fa-2x"></i></a>
