--- a/test/contact.html
+++ b/test/contact.html
@@ -38,7 +38,7 @@
     <div class="container">
       <section id="contact">
         <h1>Contact <scan class="keyword">Me</scan></h1>
-        <p>I am currently looking for 4-month long internships starting September 2019 and May 2020.<br>
+        <p>I am currently looking for 4-month long internships starting at September 2019 and May 2020.<br>
         If you know any opportunities about web development, software development, game development, or game arts field...<br>
         Please let me know!</p>
         <p>Otherwise... Feel free to message me if you want to have a chat!</p>
@@ -47,9 +47,11 @@
           <tr>
             <th><i class="fas fa-envelope-square fa-sm"></i> Email</th>
           </tr>
+<!--
           <tr>
             <td><a href = "mailto: ck6li@edu.uwaterloo.ca" target = "_blank;">ck6li@edu.uwaterloo.ca</a></td>
           </tr>
+-->
           <tr>
             <td><a href = "mailto: vert.c.k.li@gmail.com" target = "_blank;">vert.c.k.li@gmail.com</a></td>
           </tr>
@@ -77,7 +79,7 @@
       <footer id="footer">
         <p>Thanks For Coming. - Vert Li</p>
         <!-- icons -->
-        <a href = "mailto: ck6li@edu.uwaterloo.ca" target = "_blank;"><i class = "fas fa-envelope-square fa-2x"></i></a>
+        <a href = "mailto: vert.c.k.li@gmail.com" target = "_blank;"><i class = "fas fa-envelope-square fa-2x"></i></a>
         <a href = "https://www.linkedin.com/in/vertckli/" target = "_blank;"><i class = "fab fa-linkedin fa-2x"></i></a>       
         <a href = "https://www.instagram.com/vert_arts/" target = "_blank;"><i class="fab fa-instagram fa-2x"></i></a>
         <a href = "https://github.com/vertli" target = "_blank;"><i class="fab fa-github-square fa-2x"></i></a>
