--- a/test/projects.html
+++ b/test/projects.html
@@ -40,11 +40,11 @@
       <section id="projects">
         <h2>Projects</h2>
         <div id="projectsBtn">
-          <button class="btn active" onclick="filterSelection('all')"> All</button>
-          <button class="btn" onclick="filterSelection('cfamily')"> C / C++</button>
-          <button class="btn" onclick="filterSelection('java')"> Java</button>
-          <button class="btn" onclick="filterSelection('pascal')"> Pacsal</button>
-          <button class="btn" onclick="filterSelection('web')"> Web</button>
+          <button class="btn active" onclick="filterSelection('all'); restHeight('projects');" > All</button>
+          <button class="btn" onclick="filterSelection('cfamily'); restHeight('projects');"> C / C++</button>
+          <button class="btn" onclick="filterSelection('java'); restHeight('projects');" > Java</button>
+          <button class="btn" onclick="filterSelection('pascal'); restHeight('projects');"> Pacsal</button>
+          <button class="btn" onclick="filterSelection('web'); restHeight('projects');"> Web</button>
         </div>
         
         <div class="row">
