--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/GetItAtOne.png">
+                     <img src="./img/project/GetItAtOne.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
@@ -84,7 +84,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/SBA.png">
+                     <img src="./img/project/SBA.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
@@ -114,7 +114,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/fmmEscape.png">
+                     <img src="./img/project/fmmEscape.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
@@ -144,7 +144,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/TRACKR.png">
+                     <img src="./img/project/TRACKR.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
@@ -176,7 +176,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/website.png">
+                     <img src="./img/project/website.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
@@ -206,7 +206,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/minesweeper.png">
+                     <img src="./img/project/minesweeper.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
@@ -238,7 +238,7 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                    <div class="flip-card-front">
-                     <img src="./img/project/quadris.png">
+                     <img src="./img/project/quadris.jpg">
                    </div>
                    <div class="flip-card-back">
                      <div class="back-text">
