--- a/notes.html
+++ b/notes.html
@@ -44,7 +44,16 @@
             <p>Also, these notes are NOT authoritative. They may contain mistakes or omissions. Use at your own peril!</p>
             <p>If you find a typo or mistake, please feel free to contact me and I will correct it as soon as possible.</p>
           </div>
+
+              <img src="img/construction.jpg" class="centre">
+
+          <div class="row">
+            <div class="col-12">
+              <p>This page will be back after June 8, 2019... (I guess)</p>
+            </div>
+          </div>
         </div>
+        
       </section>
       
       <footer id="footer">
