--- a/about.html
+++ b/about.html
@@ -168,8 +168,8 @@
                   <td class="right"><h4>Sept. 2019 - Dec. 2019 (Yes, NOW!)</h4></td>
                 </tr>
                 <tr>
-                  <td class="left" colspan="2">Currently, I am in the Student Administration (SA) team. My job is to help the team modifying and transferring data from the old school system to the new one (Banner 9 by Ellucian) by Java, XML, and SQL.<br>
-                  But for now, I am still in my training - to be familiar with the IDE and the system.
+                  <td class="left" colspan="2">Currently, I am in the Student Administration (SA) team. My job is to help the team modify and transfer data from the old school system to the new one (Banner 9 by Ellucian) by Java, XML, and SQL.<br>
+                  But for now, I am still training to be familiar with the IDE and the system.
                    </td>
                 </tr>
                 <tr>
