--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
           <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">CS 230</a>
-            <a href="#">CS 246</a>
+            <a href="./notes.html">CS 230</a>
+            <a href="./notes.html">CS 246</a>
           </div>
         </div>
         <a href="/doc/NewResume_CKLI.pdf">Résumé</a>
@@ -38,10 +38,10 @@
     <div class="container">
       <section id="contact">
         <h1>Contact <scan class="keyword">Me</scan></h1>
-        <p>I am currently looking for 4-month long internships starting at September 2019 and May 2020.<br>
+        <p>I am currently looking for 4-month long internship starting at May 2020.<br>
         If you know any opportunities about web development, software development, game development, or game arts field...<br>
         Please let me know!</p>
-        <p>Otherwise... Feel free to message me if you want to have a chat!</p>
+        <p>Otherwise...<br>Feel free to message me if you want to have a chat!</p>
         
         <table>
           <tr>
