--- a/arts.html
+++ b/arts.html
@@ -24,8 +24,8 @@
           <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">CS 230</a>
-            <a href="#">CS 246</a>
+            <a href="./notes.html">CS 230</a>
+            <a href="./notes.html">CS 246</a>
           </div>
         </div>
         <a href="/doc/NewResume_CKLI.pdf">Résumé</a>
