--- a/notes.html
+++ b/notes.html
@@ -24,8 +24,8 @@
           <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">CS 230</a>
-            <a href="#">CS 246</a>
+            <a href="./notes.html">CS 230</a>
+            <a href="./notes.html">CS 246</a>
           </div>
         </div>
         <a href="/doc/NewResume_CKLI.pdf">Résumé</a>
@@ -40,18 +40,29 @@
         <div class="row">
           <div class="col-12">
             <h1>Before you continue this page...</h1>
+            <p>Okay, here is the story.</p>
+            <p>I used to provide my CS230 and CS246 course notes here since I typed them when I attended the lectures.</p>
+            <p>But I recoded the whole website; the stylesheet for those notes does not work with the new layout.</p>
+            <p>Thus, I removed my notes.</p>
+            <p>&nbsp;</p>
+            <p>I will update my notes someday in the future when I finish modified. So...</p>
+            
+<!--
             <p>These notes below are taken by me while attending lectures at the University of Waterloo. You can review them free of charge from my website. I have no intention of violating any policies from University of Waterloo, and will gladly honour takedown notices produced by an authorized University of Waterloo representative.</p> 
             <p>Also, these notes are NOT authoritative. They may contain mistakes or omissions. Use at your own peril!</p>
             <p>If you find a typo or mistake, please feel free to contact me and I will correct it as soon as possible.</p>
+-->
           </div>
 
               <img src="img/construction.jpg" class="centre">
 
+<!--
           <div class="row">
             <div class="col-12">
               <p>This page will be back after June 8, 2019... (I guess)</p>
             </div>
           </div>
+-->
         </div>
         
       </section>
